[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/menu/HelpMenu.gd" type="Script" id=1]
[ext_resource path="res://audio/Tempting Secrets.wav" type="AudioStream" id=2]
[ext_resource path="res://sprites/backgrounds/pyramid.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/fonts/lunchds_size_40.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/VBoxContainer/Continue_button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/VBoxContainer/MainMenu_button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="HelpMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 530, 300 )
stream = ExtResource( 2 )
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 145.0
margin_top = 225.0
margin_right = 879.0
margin_bottom = 374.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 734.0
margin_bottom = 98.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 734.0
margin_bottom = 98.0
columns = 3

[node name="Tut1" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_right = 242.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 4 )
text = "Tutorial 1"

[node name="Tut2" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 246.0
margin_right = 488.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 4 )
text = "Tutorial 2"

[node name="Tut3" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 492.0
margin_right = 734.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 4 )
text = "Tutorial 3"

[node name="Level1" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 51.0
margin_right = 242.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 4 )
text = "Fight 1"

[node name="Level2" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 246.0
margin_top = 51.0
margin_right = 488.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 4 )
text = "Fight 2"

[node name="Level3" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 492.0
margin_top = 51.0
margin_right = 734.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 4 )
text = "Fight 3"

[node name="MainMenu_button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 734.0
margin_bottom = 149.0
custom_fonts/font = ExtResource( 4 )
text = "Back to Menu"

[node name="Ending_Anim" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/GridContainer/Tut1" to="." method="_on_Tut1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/GridContainer/Tut2" to="." method="_on_Tut2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/GridContainer/Tut3" to="." method="_on_Tut3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/GridContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/GridContainer/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/GridContainer/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenu_button" to="." method="_on_MainMenu_button_pressed"]
